--- a/etc/plugin.yml
+++ b/etc/plugin.yml
@@ -1,6 +1,6 @@
 name: TheMonkeyPack
-main: org.simiancage.TheMonkeyPack.TheMonkeyPack
-version: 1.0
+main: org.simiancage.bukkit.TheMonkeyPack.TheMonkeyPack
+version: 0.1
 website: http://dev.bukkit.org/server-mods/themonkeypack/
 author: Don Redhorse
 description: Lot's of stuff.... neat stuff
