added Redstone and Rail Protection Module, v 0.7 added " around kits to support items with data values, close #4

--- a/etc/TheMonkeyPackMainConfig.yml
+++ b/etc/TheMonkeyPackMainConfig.yml
@@ -65,7 +65,7 @@ example: 'An example for the command is '
 #-------- Module [AFK Handler] --------
 
 # Kick, Announce, GOD mode when AFK
-enableAfkHandler: false
+enableRARP: false
 
 #-------- Module [HelloWorld] --------
 
