--- a/etc/TNTControlConfig.yml
+++ b/etc/TNTControlConfig.yml
@@ -1,11 +1,11 @@
-# TheMonkeyPack 0.3 by [Don Redhorse]
+# TheMonkeyPack 0.7 by [Don Redhorse]
 #
 # Configuration File for module [TNTControl]
 #
 # For detailed assistance please visit: http://dev.bukkit.org/server-mods/monkey-pack/
 
 # Configuration Version
-configVer: "1.0"
+configVer: "1.1"
 
 #-------- Module Configuration
 
@@ -13,23 +13,26 @@ configVer: "1.0"
 
 # Level up to which players with the tmp.tnt.allowed permission 
 # are allowed to place and activate TNT. 
-tntBlastLimit: 54
+tntBlastLimit: 60
 # Yield of the TNT Blast in percent (WITHOUT % !!) 
 tntBlastYield: 30
 # Radius of the TNT Blast in blocks
 tntBlastRadius: 4
 # Will TNT Blast cause a fire?
 tntBlastCauseFire: false
-# Allow placement of TNT on the surface. Note: This will prohibit placing / activating TNT even if the surface
-# is below Level 54 and even if the player has the tmp.tnt.abovelimit.place permission.
+# Allow placement / activation of TNT on the surface. Note: This will prohibit placing / activating TNT even if the surface
+# is below Level 60 and even if the player has the tmp.tnt.abovelimit.place permission.
 # NOTE: This means the highest block atm, so this means ON a tree for example
-tntOnSurface: on
-# Give the TNT placement some slack and also allow TNT to be place / activated x blocks below surface.
+tntOnSurface: false
+# Give the TNT placement / activation some slack and also allow TNT to be placed / activated x blocks below surface.
 tntBelowSurfaceLevel: 5
 # Allow a tool to be used to reclaim TNT
 tntAllowReclaimTool: true
 # Tool to be used for reclaiming
 tntReclaimTool: 359
+# Allow detonating TNT with Redstone
+# NOTE: If you DISABLE this you will also disable any detonation caused by moved TNT, aka chain explosions!
+tntAllowRedstonePrime: true
 
 # --- Translation Features
 
@@ -80,6 +83,8 @@ InfoBlastRadius: "Radius : %radius"
 InfoBlastYield: "Yield : %yield"
 # Info Messages to display if TNT explosion causes fire
 InfoBlastFire: "TNT Blast causes fire: %onOff"
+# Infoe Messages to display if TNT can be exploded by redstone
+InfoTntAllowRedstonePrime: "TNT can be primed by redstone: %onOff"
 # Info Messages to display if TNT is allowed on the surface
 InfoOnSurface: "TNT is allowed on surface : %onOff"
 # Info Messages to display if Slack is allowed.
